fix whitespace loan status

--- a/dflat/js/savi.css
+++ b/dflat/js/savi.css
@@ -28,7 +28,7 @@ body		{background-color:#47506B; margin-top:40px; color:#FFF;}
 .header,
 .header_doc	{font-size:14px; color:#ccc; text-transform:uppercase; display:block; border-bottom:1px solid #aaa; padding-bottom:10px; margin-bottom:20px; position:relative;}
 .header_doc	{border:0; margin:0;}
-.header_section	{font-size:12px; color:#FFF; background-color:rgba(17,46,105,0.9); padding:10px 40px; margin:0 0 20px -50px; width:980px; position:relative; text-transform:uppercase; box-sizing:border-box;}
+.header_section	{font-size:12px; color:#FFF; background-color:rgba(17,46,105,0.9); padding:10px 40px; margin:0 0 20px -50px; width:980px; text-transform:uppercase; box-sizing:border-box;}
 .sticky		{position:sticky; top:-1px; z-index:2;}
 .nostick	{position:initial;}
 span.block	{display:block;}
@@ -359,6 +359,7 @@ table.budget.result td:nth-of-type(3)		{width:500px; padding-right:0px;}
 .wrap_related_activity th.related_type,
 .wrap_related_activity td.related_type	{width:160px;}
 
+/*	IATI ACTIVITY OTHER IDENTIFIER TABLE	*/
 .wrap_other_identifier th.other_desc,
 .wrap_other_identifier td.other_desc	{width:240px;}
 .wrap_other_identifier th.other_type,
@@ -368,12 +369,14 @@ table.budget.result td:nth-of-type(3)		{width:500px; padding-right:0px;}
 .wrap_other_identifier th.owner_ref,
 .wrap_other_identifier td.owner_ref		{padding-right:20px;}
 
-/*	CRS ADD	*/
+/*	IATI ACTIVITY CRS ADD TABLE	*/
 .wrap_crs			{display:inline-block; vertical-align:bottom; width:19%; padding-bottom:35px; font-size:14px;}
 .crs_head			{font-size:12px; border-bottom:1px solid #aaa; color:#ccc; margin-bottom:10px; padding-bottom:10px;}
 .crs .wrap_crs:first-of-type::before	{content:"CRS ADD LOAN STATUS"; font-size:12px; color:#FFF; background-color:rgba(17,46,105,0.9); padding:10px 40px; margin:0 0 20px -50px; width:980px; text-transform:uppercase; box-sizing:border-box; display:block;}
-.crs_channel_code	{width:200px; font-size:14px; position:absolute; top:9px; right:20px; text-align:center;}
-.crs_channel_code span	{font-size:12px;}
+.wrap_crs_add th.crs_code,
+.wrap_crs_add td.crs_code	{width:240px; padding-right:20px;}
+.wrap_crs_add th.crs_sig,
+.wrap_crs_add td.crs_sig	{width:160px; padding-right:20px;}
 
 /*	DEFAULTS MODALITIES	*/
 table.modals					{table-layout:fixed; border-collapse:collapse; width:100%;}
